Major fixes to CF

--- a/modules/403.html
+++ b/modules/403.html
@@ -71,7 +71,7 @@
       Sorry, you don’t have permission to access this page or perform this action.
       If you believe this is an error, please contact support for assistance.
     </p>
-    <a href="/" class="btn">Go Back Home</a>
+    <a href="/apps" class="btn">Go Back Home</a>
   </div>
 </body>
 </html>
