--- a/modules/404.html
+++ b/modules/404.html
@@ -31,6 +31,6 @@
 <body>
     <h1>404 Not Found</h1>
     <p>Sorry, the page you are looking for does not exist.</p>
-    <p><a href="/">Go back Home</a></p>
+    <p><a href="/apps">Go back Home</a></p>
 </body>
 </html>
